2015-04-08  H.J. Lu  <hongjiu.lu@intel.com>

	* elfcpp.h (SHF): Add SHF_COMPRESSED.
	(ELFCOMPRESS_ZLIB): New.
	(ELFCOMPRESS_LOOS): Likewise.
	(ELFCOMPRESS_HIOS): Likewise.
	(ELFCOMPRESS_LOPROC): Likewise.
	(ELFCOMPRESS_HIPROC): Likewise.

2015-04-07  HC Yen <hc.yen@mediatek.com>

	* arm.h: Add TAG_CPU_ARCH_V8 in Tag_CPU_arch EABI attribute.

2015-02-09  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h (enum DW_LANG): Add DW_LANG_C_plus_plus_11,
	DW_LANG_C11, DW_LANG_C_plus_plus_14, DW_LANG_Fortran03 and
	DW_LANG_Fortran08 from ../include/dwarf2.h.

2015-01-22  Han Shen  <shenhan@google.com>

	* arm.h (R_ARM_IRELATIVE): New dynamic relocation.

2015-01-01  Alan Modra  <amodra@gmail.com>

	Update year range in copyright notice of all files.

2014-12-25  Alan Modra  <amodra@gmail.com>

	* arm.h: Add enums for Tag_ABI_FP_number_model and Tag_ABI_VFP_args.

2014-09-17  Han Shen  <shenhan@google.com>

	* aarch64.h (R_AARCH64_TLS_DTPREL64): Switch enum value with ...
	(R_AARCH64_TLS_DTPMOD64): ... enum value.

2014-09-15  Andrew Bennett  <andrew.bennett@imgtec.com>
	    Matthew Fortune  <matthew.fortune@imgtec.com>

	* mips.h (E_MIPS_ARCH_32R6, E_MIPS_ARCH_64R6): New enum constants.

2014-09-02  Cary Coutant  <ccoutant@google.com>

	* elfcpp_file.h (Elf_file::shnum): New const function.
	(Elf_file::shstrndx): New const function.
	(Elf_file::large_shndx_offset): New const function.
	(Elf_file::section_name): Add const attribute.
	(Elf_file::section_header_offset): Likewise.

2014-08-08  Han Shen  <shenhan@google.com>

	* aarch64.h (withdrawn): Replaced with R_AARCH64_withdrawn.

2014-07-29  Matthew Fortune  <matthew.fortune@imgtec.com>

	* elfcpp.h (PT_MIPS_ABIFLAGS): New program header type.

2014-07-02  Jing Yu  <jingyu@google.com>

	* aarch64.h: New file. New enums for aarch64-elf64 relocations.
	* elfcpp.h (EM_AARCH64, SHT_AARCH64_ATTRIBUTES, PT_AARCH64_ARCHEXT,
	PT_AARCH64_UNWIND): New enum constant.

2014-04-22  Christian Svensson  <blue@cmd.nu>
